# src/modules/farm/dtos/update-crop.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateCropDto } from '../../farm/dtos/create-crop.dto';
+
+export class UpdateCropDto extends PartialType(CreateCropDto) {}
