# src/modules/farm/entities/crop.entity.ts
@@ -1,0 +1,13 @@
+import { Entity, Column, PrimaryGeneratedColumn } from 'typeorm';
+import { ApiProperty } from '@nestjs/swagger';
+
+@Entity()
+export class Crop {
+  @PrimaryGeneratedColumn('uuid')
+  @ApiProperty()
+  id!: string;
+
+  @Column()
+  @ApiProperty()
+  crop_name!: string;
+}
